--- a/p1_navigation/Navigation.ipynb
+++ b/p1_navigation/Navigation.ipynb
@@ -247,7 +247,6 @@
     "        next_states = torch.from_numpy(next_states).float().to(device)\n",
     "        dones = torch.from_numpy(np.expand_dims(dones.astype(np.uint8), axis=-1)).float().to(device)        \n",
     "        weights = torch.from_numpy(weights).float().to(device)\n",
-    "        \n",
     "\n",
     "        # Get max predicted Q values (for next states) from target model\n",
     "        # Double DQN\n",
@@ -274,7 +273,10 @@
     "        # ------------------- update target network ------------------- #\n",
     "        self.soft_update(self.qnetwork_local, self.qnetwork_target, TAU) \n",
     "\n",
-    "\n",
+    "        # ------------------- update priorities ------------------- #        \n",
+    "        new_priorities = np.abs(np.squeeze(delta.cpu().detach().numpy())) + PRIORITIZED_REPLAY_EPS\n",
+    "        self.memory.update_priorities(indices, new_priorities)\n",
+    "        \n",
     "    def soft_update(self, local_model, target_model, tau):\n",
     "        \"\"\"Soft update model parameters.\n",
     "        θ_target = τ*θ_local + (1 - τ)*θ_target\n",
@@ -440,20 +442,6 @@
     "# Close the environment\n",
     "env.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
