--- a/mountain_car/Mountain-Car_DDPG_PPO.ipynb
+++ b/mountain_car/Mountain-Car_DDPG_PPO.ipynb
@@ -64,9 +64,34 @@
     "print('env.action_space.low', env.action_space.low)\n",
     "print('env.action_space.high', env.action_space.high)\n",
     "\n",
-    "\n",
-    "\n",
-    "print('env.reward_range', env.reward_range)\n"
+    "print('env.reward_range', env.reward_range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DDPGConfig = {\n",
+    "    'net' : {\n",
+    "            'state_size': 2,\n",
+    "            'action_size': 1,\n",
+    "            'phi_size': 16,\n",
+    "            'seed': 0,\n",
+    "        },\n",
+    "    'opt': {\n",
+    "            'actor_lr': 1e-3,\n",
+    "            'critic_lr': 1e-3,        \n",
+    "        },\n",
+    "    'replay_buffer': {\n",
+    "        'size': int(1e5),\n",
+    "    },\n",
+    "    'env': {\n",
+    "        'action_low': [-1],\n",
+    "        'action_high' [1],\n",
+    "    },\n",
+    "}"
    ]
   },
   {
@@ -90,13 +115,14 @@
     "\n",
     "class ActorCriticPolicy(nn.Module):\n",
     "\n",
-    "    def __init__(self, state_size, action_size, action_low, action_high, phi_size, noise_std):\n",
+    "    def __init__(self, state_size, action_size, phi_size, seed):\n",
     "        super(Policy, self).__init__()\n",
+    "        self.seed = torch.manual_seed(seed)\n",
     "        \n",
     "        self.state_size = state_size\n",
     "        self.action_size = action_size\n",
-    "        self.action_low = np.expand_dims(action_low, 0)\n",
-    "        self.action_high = np.expand_dims(action_high, 0)\n",
+    "        #self.action_low = np.expand_dims(action_low, 0)\n",
+    "        #self.action_high = np.expand_dims(action_high, 0)\n",
     "        self.phi_size = phi_size\n",
     "        self.hidden_size = 64\n",
     "        \n",
@@ -114,7 +140,7 @@
     "        return phi\n",
     "    \n",
     "    def actor(self, phi):\n",
-    "        action = F.sigmoid(self.fc_actor(phi))\n",
+    "        action = F.tanh(self.fc_actor(phi))\n",
     "        return action\n",
     "    \n",
     "    def critic(self, phi, a):\n",
@@ -125,12 +151,40 @@
     "        phi = self.feature(state)\n",
     "        action = self.actor(phi)\n",
     "        return action \n",
-    "\n",
+    "#, action_low, action_high\n",
+    "    \n",
     "class DDPGAgent():\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "    \n",
+    "    def __init__(self, cfg):\n",
+    "        self.cfg = cfg\n",
+    "        \n",
+    "        self.seed = np.random.seed(cfg['net']['seed'])\n",
+    "        \n",
+    "        self.qnetwork_local = ActorCriticPolicy(cfg['net']).to(device)\n",
+    "        self.qnetwork_target = ActorCriticPolicy(cfg['net']).to(device)\n",
+    "        self.actor_optimizer = optim.Adam(self.qnetwork_local.parameters(), lr=cfg['opt']['actor_lr'])\n",
+    "        self.critic_optimizer = optim.Adam(self.qnetwork_local.parameters(), lr=cfg['opt']['actor_lr'])\n",
+    "\n",
+    "        # Replay memory\n",
+    "        self.memory = ReplayBuffer(cfg['replay_buffer']['size'])\n",
+    "        # Initialize time step (for updating every UPDATE_EVERY steps)\n",
+    "        self.t_step = 0\n",
+    "        \n",
+    "    def act(self, state, std=0.):\n",
+    "        state = torch.from_numpy(state).float().unsqueeze(0).to(device)\n",
+    "        self.qnetwork_local.eval()\n",
+    "        with torch.no_grad():\n",
+    "            actions_local = self.qnetwork_local(state)\n",
+    "        self.qnetwork_local.train()\n",
+    "        \n",
+    "        actions_local = actions_local.cpu().data.numpy()\n",
+    "        noise = np.random.randn(*actions_local.shape) * std\n",
+    "        actions_local += noise\n",
+    "        actions_local = np.clip(actions_local, cfg['env']['action_low'], cfg['env']['action_high'])\n",
+    "\n",
+    "        return actions_local\n",
+    "        \n",
+    "    '''\n",
     "    def step(self, state, action, reward, next_state, done):        \n",
     "        idx = self.memory._next_idx\n",
     "        \n",
@@ -158,25 +212,7 @@
     "                self.learn(experiences, GAMMA)\n",
     "                               \n",
     "                \n",
-    "    def act(self, state, eps=0.):\n",
-    "        \"\"\"Returns actions for given state as per current policy.\n",
-    "        \n",
-    "        Params\n",
-    "        ======\n",
-    "            state (array_like): current state\n",
-    "            eps (float): epsilon, for epsilon-greedy action selection\n",
-    "        \"\"\"\n",
-    "        state = torch.from_numpy(state).float().unsqueeze(0).to(device)\n",
-    "        self.qnetwork_local.eval()\n",
-    "        with torch.no_grad():\n",
-    "            actions_local = self.qnetwork_local(state)\n",
-    "        self.qnetwork_local.train()\n",
     "\n",
-    "        # Epsilon-greedy action selection\n",
-    "        if random.random() > eps:\n",
-    "            return np.argmax(actions_local.cpu().data.numpy())\n",
-    "        else:\n",
-    "            return random.choice(np.arange(self.action_size))\n",
     "    \n",
     "    def compute_delta(self, states, actions, rewards, next_states, dones, gamma):\n",
     "        states = torch.from_numpy(states).float().to(device)\n",
@@ -203,13 +239,6 @@
     "        return delta\n",
     "\n",
     "    def learn(self, experiences, gamma):\n",
-    "        \"\"\"Update value parameters using given batch of experience tuples.\n",
-    "\n",
-    "        Params\n",
-    "        ======\n",
-    "            experiences (Tuple[torch.Variable]): tuple of (s, a, r, s', done) tuples \n",
-    "            gamma (float): discount factor\n",
-    "        \"\"\"        \n",
     "        states, actions, rewards, next_states, dones, weights, indices = experiences\n",
     "        \n",
     "        states = torch.from_numpy(states).float().to(device)\n",
@@ -249,61 +278,55 @@
     "        self.memory.update_priorities(indices, new_priorities)\n",
     "        \n",
     "    def soft_update(self, local_model, target_model, tau):\n",
-    "        \"\"\"Soft update model parameters.\n",
-    "        θ_target = τ*θ_local + (1 - τ)*θ_target\n",
-    "\n",
-    "        Params\n",
-    "        ======\n",
-    "            local_model (PyTorch model): weights will be copied from\n",
-    "            target_model (PyTorch model): weights will be copied to\n",
-    "            tau (float): interpolation parameter \n",
-    "        \"\"\"\n",
     "        for target_param, local_param in zip(target_model.parameters(), local_model.parameters()):\n",
     "            target_param.data.copy_(tau*local_param.data + (1.0-tau)*target_param.data)\n",
-    "    \n",
-    "'''    \n",
-    "    def _action(self, state):\n",
-    "        phi = self._phi(state)\n",
-    "        \n",
-    "        _actor_mean = F.sigmoid(self.actor(phi)) * (self.action_high - self.action_low) + self.action_low\n",
-    "        _actor_noise = torch.randn(_actor_mean.size()) * self.noise_std\n",
-    "        _actor_out = torch.clamp(_actor_mean + _actor_noise, self.action_low, self.action_high)\n",
-    "        \n",
-    "        return _actor_out, _actor_mean\n",
-    "    \n",
-    "    def _critic(self, state, action):\n",
-    "        _critic_out = self.critic(torch.cat([phi, action], dim=1))\n",
-    "        \n",
-    "        return _critic_out\n",
-    "       \n",
-    "    def forward(self, state, action):\n",
-    "    \n",
-    "        hidden = F.relu(self.fc1(state))\n",
-    "        phi = F.relu(self.fc2(hidden))\n",
-    "        \n",
-    "        _actor_mean = F.sigmoid(self.actor(phi)) * (self.action_high - self.action_low) + self.action_low\n",
-    "        _actor_noise = torch.randn(_actor_mean.size()) * self.noise_std\n",
-    "        _actor_out = torch.clamp(_actor_mean + _actor_noise, self.action_low, self.action_high)\n",
-    "        \n",
-    "        _critic_out = self.critic(phi)        \n",
+    "    '''\n",
+    "            \n",
+    "def ddpg(agent, n_episodes=2000, max_t=1000, eps_start=1.0, eps_end=0.01, eps_decay=0.995):\n",
+    "    scores = []                        # list containing scores from each episode\n",
+    "    scores_window = deque(maxlen=100)  # last 100 scores\n",
+    "    eps = eps_start                    # initialize epsilon\n",
+    "    for i_episode in range(1, n_episodes+1):\n",
+    "        env_info = env.reset(train_mode=True)[brain_name] # reset the environment\n",
+    "        state = env_info.vector_observations[0]            # get the current state\n",
+    "        score = 0\n",
+    "        for t in range(max_t):\n",
+    "            action = agent.act(state, eps)                 # select an action\n",
+    "            env_info = env.step(action)[brain_name]        # send the action to the environment\n",
+    "            next_state = env_info.vector_observations[0]   # get the next state\n",
+    "            reward = env_info.rewards[0]                   # get the reward\n",
+    "            done = env_info.local_done[0]                  # see if episode has finished       \n",
+    "            agent.step(state, action, reward, next_state, done)\n",
+    "            state = next_state\n",
+    "            score += reward\n",
+    "            if done:\n",
+    "                break \n",
+    "        scores_window.append(score)       # save most recent score\n",
+    "        scores.append(score)              # save most recent score\n",
+    "        eps = max(eps_end, eps_decay*eps) # decrease epsilon\n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
+    "        if i_episode % 100 == 0:\n",
+    "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
+    "        if np.mean(scores_window)>=13.0:\n",
+    "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
+    "            torch.save(agent.qnetwork_local.state_dict(), 'checkpoint.pth')\n",
+    "            break\n",
+    "    return scores\n",
     "\n",
-    "        return x\n",
-    "    \n",
-    "\n",
-    "    def forward(self, obs):\n",
-    "        phi = self.feature(obs)\n",
-    "        action = self.actor(phi)\n",
-    "        return action\n",
-    "\n",
-    "    def feature(self, obs):\n",
-    "        obs = tensor(obs)\n",
-    "        return self.network.phi_body(obs)\n",
-    "\n",
-    "    def actor(self, phi):\n",
-    "        return F.tanh(self.network.fc_action(self.network.actor_body(phi)))\n",
-    "\n",
-    "    def critic(self, phi, a):\n",
-    "        return self.network.fc_critic(self.network.critic_body(phi, a))    '''"
+    "          \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "start = time.time()\n",
+    "scores = ddpg(n_episodes=2000, max_t=1000, eps_start=1.0, eps_end=0.01, eps_decay=0.995)\n",
+    "end = time.time()\n",
+    "print('time = {:.2f} s'.format(end-start))  "
    ]
   },
   {
@@ -544,6 +567,45 @@
    "outputs": [],
    "source": [
     "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "            \n",
+    "'''    \n",
+    "    def _action(self, state):\n",
+    "        phi = self._phi(state)\n",
+    "        \n",
+    "        _actor_mean = F.sigmoid(self.actor(phi)) * (self.action_high - self.action_low) + self.action_low\n",
+    "        _actor_noise = torch.randn(_actor_mean.size()) * self.noise_std\n",
+    "        _actor_out = torch.clamp(_actor_mean + _actor_noise, self.action_low, self.action_high)\n",
+    "        \n",
+    "        return _actor_out, _actor_mean\n",
+    "    \n",
+    "    def _critic(self, state, action):\n",
+    "        _critic_out = self.critic(torch.cat([phi, action], dim=1))\n",
+    "        \n",
+    "        return _critic_out\n",
+    "       \n",
+    "    def forward(self, state, action):\n",
+    "    \n",
+    "        hidden = F.relu(self.fc1(state))\n",
+    "        phi = F.relu(self.fc2(hidden))\n",
+    "        \n",
+    "        _actor_mean = F.sigmoid(self.actor(phi)) * (self.action_high - self.action_low) + self.action_low\n",
+    "        _actor_noise = torch.randn(_actor_mean.size()) * self.noise_std\n",
+    "        _actor_out = torch.clamp(_actor_mean + _actor_noise, self.action_low, self.action_high)\n",
+    "        \n",
+    "        _critic_out = self.critic(phi)        \n",
+    "\n",
+    "        return x\n",
+    "    \n",
+    "\n",
+    "   '''"
    ]
   }
  ],
